# NoRedNoFun

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
Bot_dev/: BotInterface.cpp  CMakeLists.txt  ExampleBot.cpp  ExampleBot.hpp  dllmain.cpp  framework.hpp
exts/: CMakeLists.txt
exts/glad/include/glad/: glad.h
exts/glad/src/: glad.c
resources/Bots/: BotInterface.hpp
resources/Maps/: simple.map
resources/Shaders/: fragment.glsl  fragment_crt.glsl  fragment_instanced.glsl  fragment_quad.glsl  vertex.glsl  vertex_crt.glsl  vertex_instanced.glsl  vertex_quad.glsl
src/: .main_BASE_845.cpp.swp  .main_LOCAL_845.cpp.swp  .main_REMOTE_845.cpp.swp  Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  GraphicsObject.cpp  GraphicsObject.hpp  Pen.cpp  Pen.hpp  Quad.cpp  Quad.hpp  Rendering.cpp  Rendering.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SimpleShaderProgram.cpp  SimpleShaderProgram.hpp  Texture.cpp  Texture.hpp  main.cpp  main.cpp.orig  main_BACKUP_845.cpp  main_BASE_845.cpp  main_LOCAL_845.cpp  main_REMOTE_845.cpp
src/ECS/: CollisionComponent.cpp  CollisionComponent.h  CollisionSystem.cpp  CollisionSystem.h  Component.h  ECSManager.cpp  ECSManager.h  Entity.cpp  Entity.h  InputComponent.cpp  InputComponent.h  InputSystem.cpp  InputSystem.h  MovementComponent.cpp  MovementComponent.h  MovementSystem.cpp  MovementSystem.h  PositionComponent.cpp  PositionComponent.h  System.h
src/ECS/Components/: ActionComponent.cpp  ActionComponent.h  BotComponent.cpp  BotComponent.h  CollisionComponent.cpp  CollisionComponent.h  Component.h  DamageComponent.cpp  DamageComponent.h  GraphicsComponent.cpp  GraphicsComponent.h  HealthComponent.cpp  HealthComponent.h  InputComponent.cpp  InputComponent.h  MovementComponent.cpp  MovementComponent.h  PositionComponent.cpp  PositionComponent.h  WeaponComponent.cpp  WeaponComponent.h
src/ECS/Systems/: BotSystem.cpp  BotSystem.h  CollisionSystem.cpp  CollisionSystem.h  GraphicsSystem.cpp  GraphicsSystem.h  HealthSystem.cpp  HealthSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  System.cpp  System.h  WeaponSystem.cpp  WeaponSystem.h
src/Engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Rendering.cpp  Rendering.hpp  Window.cpp  Window.hpp  pch.h
src/Engine/Bots/: BotActions.hpp  BotLoader.cpp  BotLoader.hpp
src/Engine/ECS/: ECSManager.cpp  ECSManager.hpp  Entity.cpp  Entity.hpp
src/Engine/ECS/Components/: BotComponent.cpp  BotComponent.hpp  CameraFocusComponent.cpp  CameraFocusComponent.hpp  CollisionComponent.cpp  CollisionComponent.hpp  Component.hpp  DamageComponent.cpp  DamageComponent.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  HealthComponent.cpp  HealthComponent.hpp  InputComponent.cpp  InputComponent.hpp  MovementComponent.cpp  MovementComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  SeeingComponent.cpp  SeeingComponent.hpp  WeaponComponent.cpp  WeaponComponent.hpp
src/Engine/ECS/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  BotSystem.cpp  BotSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  SeeingSystem.cpp  SeeingSystem.hpp  System.cpp  System.hpp  WeaponSystem.cpp  WeaponSystem.hpp
src/Engine/MapLoader/: MapLoader.cpp  MapLoader.hpp
src/Engine/Objects/: BlurObject.cpp  BlurObject.hpp  GraphicsObject.cpp  GraphicsObject.hpp  InstancedQuadManager.cpp  InstancedQuadManager.hpp  LowPolyLiquid.cpp  LowPolyLiquid.hpp  Quad.cpp  Quad.hpp  ScreenQuad.cpp  ScreenQuad.hpp
src/Engine/Physics/: SAT.hpp  Shape.cpp  Shape.hpp
src/Engine/ShaderPrograms/: InstancedShaderProgram.cpp  InstancedShaderProgram.hpp  QuadShaderProgram.cpp  QuadShaderProgram.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SimpleShaderProgram.cpp  SimpleShaderProgram.hpp
src/Engine/ShaderPrograms/Effects/: CrtEffect.cpp  CrtEffect.hpp
src/Engine/Shaders/: fragment.glsl  fragment_instanced.glsl
src/Engine/Textures/: SpriteMap.cpp  SpriteMap.hpp  Texture.cpp  Texture.hpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Window.cpp
src/Game/Bots/: BotActions.hpp  BotLoader.cpp  BotLoader.h
src/MapLoader/: MapLoader.cpp  MapLoader.hpp
src/Objects/: GraphicsObject.cpp  GraphicsObject.hpp  InstancedQuadManager.cpp  InstancedQuadManager.hpp  LowPolyLiquid.cpp  LowPolyLiquid.hpp  Quad.cpp  Quad.hpp
src/Rendering/: Rendering.cpp  Rendering.hpp
src/Rendering/MapLoader/: MapLoader.cpp  MapLoader.hpp
src/Rendering/Objects/: GraphicsObject.hpp  InstancedQuadManager.cpp  LowPolyLiquid.cpp  Quad.cpp  Quad.hpp
src/Rendering/ShaderPrograms/: InstancedShaderProgram.cpp  InstancedShaderProgram.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SimpleShaderProgram.cpp
src/Rendering/Shaders/: vertex.glsl
src/Rendering/Textures/: Texture.cpp
src/ShaderPrograms/: InstancedShaderProgram.cpp  InstancedShaderProgram.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SimpleShaderProgram.cpp  SimpleShaderProgram.hpp
src/Shaders/: fragment.glsl  fragment_instanced.glsl  vertex.glsl  vertex_instanced.glsl
src/TestDir/: Test.cpp  Test.hpp
src/Textures/: SpriteMap.cpp  SpriteMap.hpp  Texture.cpp  Texture.hpp
