ADD_LIBRARY(exts INTERFACE)

# OpenGL
find_package(OpenGL REQUIRED)

ADD_SUBDIRECTORY(glad)
SET_TARGET_PROPERTIES(glad PROPERTIES FOLDER "exts/glad")
TARGET_INCLUDE_DIRECTORIES(exts INTERFACE glad/include)

SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build the GLFW example programs")
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "Build the GLFW test programs")
SET(GLFW_BUILD_DOCS OFF CACHE BOOL "Build the GLFW documentation")
SET(GLFW_INSTALL OFF CACHE BOOL "Generate installation target")		  

ADD_SUBDIRECTORY(glfw)
SET_TARGET_PROPERTIES(glfw PROPERTIES FOLDER "exts/glfw")
TARGET_INCLUDE_DIRECTORIES(exts INTERFACE glfw/include)

ADD_SUBDIRECTORY(glm)
TARGET_INCLUDE_DIRECTORIES(exts INTERFACE glm/include)

if (WIN32)
  TARGET_LINK_LIBRARIES(exts INTERFACE glfw opengl32 glad glm)
elseif(UNIX)
  TARGET_LINK_LIBRARIES(exts INTERFACE glfw GL glad glm)
endif()
